[tool.poetry]
name = "mote"
version = "0.7.0"
description = "Python Flask project used to aggregate and distribute IRC meeting minutes and logs for the Fedora Project"
authors = ["Fedora Websites and Apps Team <websites@lists.fedoraproject.org>"]
maintainers = ["Akashdeep Dhar <t0xic0der@fedoraproject.org>"]
license="GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/fedora-infra/mote"
repository = "https://github.com/fedora-infra/mote"
documentation = "https://github.com/fedora-infra/mote/README.md"
keywords = ["minutes", "meetings", "Fedora", "teams", "logs"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet",
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
requests = "^2.20.0"
beautifulsoup4 = "^4.10.0"
Flask-SocketIO = "^5.1.1"
fedora-messaging = "^3.0.0"
gunicorn = "^20.1.0"
gevent = "^21.8.0"
gevent-websocket = "^0.10"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.1"
flake8 = "<4"
pytest = "^6.2.5"
pytest-black = "^0.3.12"
pytest-flake8 = "^1.0.7"
pytest-isort = "^2.0.0"

[tool.pytest.ini_options]
addopts = "--black --isort --flake8"
flake8-max-line-length = 100
filterwarnings = ["ignore::DeprecationWarning:flake8:254"]

[tool.isort]
profile = "black"
line_length = "100"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mote = "mote.main:mainfunc"

