[tool.poetry]
name = "mote"
version = "0.7.0"
description = "Python Flask project used to aggregate and distribute IRC meeting minutes and logs for the Fedora Project"
authors = ["Fedora Websites and Apps Team <websites@lists.fedoraproject.org>"]
maintainers = ["Akashdeep Dhar <t0xic0der@fedoraproject.org>"]
license="GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/fedora-infra/mote"
repository = "https://github.com/fedora-infra/mote"
documentation = "https://github.com/fedora-infra/mote/README.md"
keywords = ["minutes", "meetings", "Fedora", "teams", "logs"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet",
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2 || ^3.0.0"
requests = "^2.32.0"
beautifulsoup4 = "^4.10.0"
Flask-SocketIO = "^5.1.1"
fedora-messaging = "^3.0.0"
gunicorn = "^20.1.0 || ^21.0.0 || ^22.0.0 || ^23.0.0"
gevent = "^23.9.0 || ^24.0.0"
gevent-websocket = "^0.10"
Flask-Caching = "^2.0.0"
python-dateutil = "^2.8.2"
redis = "^4.1.4 || ^5.0.0"
rq = "^1.10.1 || ^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3 || ^8.0.0"
pytest-cov = "^4.1.0 || ^5.0.0 || ^6.0.0"
pytest-mock = "^3.8.1"
ruff = "^0.2.0 || ^0.3.0 || ^0.6.0 || ^0.7.0 || ^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0"
tox = "^4.0.0"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"mote/*" = ["UP031", "B904", "B007", "S310", "S104"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mote = "mote.main:mainfunc"
